// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Position can render a disable select 1`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
          disabled
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option value="CP">
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position can render a disable select 2`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
          disabled
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option value="CP">
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position can render an error message 1`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option value="CP">
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position can render an error message 2`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option value="CP">
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position can render an initial selected value 1`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option selected
            value="CP"
    >
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position can render an initial selected value 2`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option selected
            value="CP"
    >
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position render a select with a label 1`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option value="CP">
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;

exports[`Position render a select with a label 2`] = `
<div id="positionField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="select"
     data-ui-item-name="position"
     data-validate="required"
>
  <label for="position"
         class="o-forms__label"
  >
    What’s your job position?
  </label>
  <select id="position"
          name="position"
          class="o-forms__select js-field__input js-item__value"
          data-trackable="field-position"
          aria-required="true"
          required
  >
    <option value>
      Please select a job position
    </option>
    <option value="AN">
      Analyst
    </option>
    <option value="AS">
      Associate
    </option>
    <option value="BR">
      Broker/Trader/Advisor
    </option>
    <option value="BU">
      Business School Academic
    </option>
    <option value="CP">
      CEO/president/Chairman
    </option>
    <option value="CS">
      Consultant
    </option>
    <option value="DT">
      Diplomat/Sen Govt Officer
    </option>
    <option value="OE">
      Exec Mgmt (EVP/SVP/MD)
    </option>
    <option value="GI">
      Gov&#x27;t/Int&#x27;l org official
    </option>
    <option value="MB">
      MBA Student
    </option>
    <option value="MA">
      Manager/Supervisor
    </option>
    <option value="OT">
      Other
    </option>
    <option value="MD">
      Other C Level (CFO/COO/CIO/CMO)
    </option>
    <option value="OP">
      Owner/Partner/Proprietor
    </option>
    <option value="PO">
      Politician/Government Minister
    </option>
    <option value="PR">
      Professional
    </option>
    <option value="PM">
      Programme/Project Manager
    </option>
    <option value="SE">
      Secretary/Treasurer
    </option>
    <option value="SM">
      Senior Manager/Dept Head
    </option>
    <option value="TS">
      Technical/Business Specialist
    </option>
    <option value="DH">
      VP/Director
    </option>
  </select>
  <div class="o-forms__errortext">
    Please select your position
  </div>
</div>
`;
